# cmake-ci

./: CMakeLists.txt  hello_world.c
